@@ -1,3 +1,8 @@
+2007-02-18  Titus Brown  <t@localhost.localdomain>
+
+	* Added paste.lint tests into wsgi_intercept test code; fixed
+	  only problem noted.
+
 2007-02-15  Titus Brown  <t@localhost.localdomain>
 
 	* Fixed browser.get_form to only allow valid form numbers (Mariusz).
